--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@bangladeshi/bangladesh-address": "^1.0.5",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
+    "@reduxjs/toolkit": "^2.11.0",
     "axios": "^1.13.2",
     "next": "16.0.3",
     "next-auth": "^4.24.13",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
-    "react-hot-toast": "^2.6.0"
+    "react-hot-toast": "^2.6.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
