--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "16.0.3",
     "next-auth": "^4.24.13",
     "react": "19.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
     "react-hot-toast": "^2.6.0",
