--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/x-charts": "^8.20.0",
     "@mui/x-data-grid": "^8.20.0",
     "@reduxjs/toolkit": "^2.11.0",
+    "@vis.gl/react-google-maps": "^1.7.1",
     "axios": "^1.13.2",
     "next": "16.0.3",
     "next-auth": "^4.24.13",
