--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^2.11.0",
     "@vis.gl/react-google-maps": "^1.7.1",
     "axios": "^1.13.2",
+    "motion": "^12.28.1",
     "next": "^16.1.1",
     "next-auth": "^4.24.13",
     "react": "19.2.0",
